# Furtrack-Downloader

./: .gitignore  LICENSE  README.md  furtrack_image_lib.csv  pyproject.toml  requirements.txt  setup.py
furtrack-downloader/: utils.py
src/furtrack-downloader/: cli.py  config.py  csv_handler.py  downloader.py  logging_config.py  progress.py  scraper.py  utils.py
